# datarock

./: .gitignore
solution/: .coverage  Makefile  README.md  checkout.py  example.py  models.py  pricing_rules.py  pyproject.toml  specials.yaml  test.py
solution/data/: catalogue.yaml
solution/src/: checkout.py  exceptions.py  models.py  pricing_rules.py
solution/tests/: conftest.py  test_checkout.py
