[tool.poetry]
name = "dius-shopping"
version = "0.1.0"
description = "Solution to the shopping coding challenge created by DIUS for DataRock."
authors = ["Richa <richa_lad@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.9.2"
pyyaml = "^6.0.2"
black = "^24.8.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
